docs(memory): update investigation docs and scripts